--- a/themes/san-diego/source/styles/_impact-modal.scss
+++ b/themes/san-diego/source/styles/_impact-modal.scss
@@ -409,7 +409,7 @@
         letter-spacing: 0.01em;
         text-transform: uppercase;
         opacity: 0.9;
-        line-height: var(--line-height-tight).2;
+        line-height: var(--line-height-tight);
         
     }
     
